@@ -59,6 +59,10 @@ Version 3  ???
 --Server now only archives robbery logs for dead owners 1 day, and living
   owners 5 days.
 
+--Player earns $100 and wife earns $200 for each hour that player spends away 
+  from house.
+
+
 
 Version 2    2013-February-27    (private pre-alpha)
 
